# game1

./: .gitignore  CMakeLists.txt
lib/freetype-2.10.2/builds/unix/: config.status  freetype-config  freetype2.pc  ftoption.h  libtool  unix-cc.mk  unix-def.mk
lib/freetype-2.10.2/objs/: apinames  autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  truetype.lo  type1.lo  type1cid.lo  (+2 more)
lib/freetype-2.10.2/objs/.libs/: libfreetype.lai  libfreetype.so.6.17.2
src/: Block.cpp  Block.h  Boid.cpp  Boid.h  BoidSwarm.cpp  BoidSwarm.h  Camera.cpp  Camera.h  Client.cpp  Client.h  DebugOptions.h  GLResourceManager.cpp  GLResourceManager.h  Game.cpp  Game.h  Grid.cpp  Grid.h  InputManager.cpp  InputManager.h  Player.cpp  Player.h  ShaderManager.cpp  ShaderManager.h  TextRenderer.cpp  TextRenderer.h  collisions.cpp  collisions.h  main.cpp
src/physics/: PhysicsBody.cpp  PhysicsBody.h
src/server/: Server.cpp  Server.h
src/shaders/: grid_frag.glsl  grid_vert.glsl  line_vert.glsl  screenspace_simple_vert.glsl  simple_color_frag.glsl  simple_vert.glsl  text_frag.glsl  text_vert.glsl
src/ui/: SliderBarElement.cpp  SliderBarElement.h  SpacerElement.h  TextElement.cpp  TextElement.h  UIContainer.cpp  UIContainer.h  UIElement.cpp  UIElement.h  ValueSliderElement.cpp  ValueSliderElement.h  WindowElement.cpp  WindowElement.h
src/utils/: Circle.cpp  Circle.h  CircleFilled.cpp  CircleFilled.h  Rectangle.cpp  Rectangle.h  networking.cpp  networking.h  paths.h.in
